--- a/frontend/src/error-section.html
+++ b/frontend/src/error-section.html
@@ -1,5 +1,19 @@
-<section id="error-section" style="display: none">
+<style>
+  #error-section {
+    display: none;
+  }
+</style>
+
+<section id="error-section">
   <h2 class="text-lg mt-8">Something's gone wrong</h2>
   <p>Please let us know about this issue at info@eaa.org.au</p>
   <p>Click <a href="/pledge_new/">here</a> to start again.</p>
 </section>
+
+<script>
+  class ErrorSection {
+    constructor() {
+      $("#error-section").style.display = "block";
+    }
+  }
+</script>
