--- a/frontend/src/allocation-section.html
+++ b/frontend/src/allocation-section.html
@@ -1,33 +1,55 @@
-<section id="allocation-section" style="display: none">
+<style>
+  #allocation-section {
+    display: none;
+  }
+</style>
+
+<section id="allocation-section">
   <h2 class="text-lg mt-8">I would like my gift to go to</h2>
   <div class="radio-group flex gap-2 mb-4">
     <input
       type="radio"
-      id="default-allocation"
-      name="allocation-type"
+      id="allocation-section--default-allocation"
+      name="allocation-section--allocation-type"
       value="default"
       checked
-      onclick="hide('#custom-allocation-section'); showBlock('#amount-section');"
+      onclick="AllocationSection.handleDefaultAllocationChange();"
     />
-    <label for="default-allocation" class="flex items-center justify-center rounded text-blue">
+    <label for="allocation-section--default-allocation" class="flex items-center justify-center rounded text-blue">
       The most effective charities^
     </label>
 
     <input
       type="radio"
-      id="custom-allocation"
-      name="allocation-type"
-      value="custom"
-      onclick="hide('#amount-section'); showBlock('#custom-allocation-section');"
+      id="allocation-section--specific-allocation"
+      name="allocation-section--allocation-type"
+      value="specific"
+      onclick="AllocationSection.handleSpecificAllocationChange();"
     />
-    <label for="custom-allocation" class="flex items-center justify-center rounded text-blue">
+    <label for="allocation-section--specific-allocation" class="flex items-center justify-center rounded text-blue">
       These specific charities
     </label>
   </div>
-  <p style="font-size: small;">
+  <p class="text-sm">
     ^According to EAA. We select the most effective charities each quarter
     based on evidence and need. You can read more about how we evaluate
     charities
     <a href="https://effectivealtruism.org.au/evaluating-charities/">here</a>.
   </p>
 </section>
+
+<script>
+  class AllocationSection {
+    constructor() {
+      $("#allocation-section").style.display = "block";
+    }
+
+    static handleSpecificAllocationChange() {
+      formController.setAllocationType("specific");
+    }
+
+    static handleDefaultAllocationChange() {
+      formController.setAllocationType("default");
+    }
+  }
+</script>
