--- a/frontend/src/gift-section.html
+++ b/frontend/src/gift-section.html
@@ -1,4 +1,10 @@
-<section id="gift-section" style="display: none">
+<style>
+  #gift-section {
+    display: none;
+  }
+</style>
+
+<section id="gift-section">
   <div class="flex flex-col items-start validate">
     <h2 class="text-lg mt-8">
       Are you making this donation as a gift to someone?
@@ -6,8 +12,8 @@
     <label class="eaa-checkbox mb-4" for="gift">
       <input
         type="checkbox"
-        id="gift"
-        name="is_gift"
+        id="gift-section--is-gift"
+        name="gift-section--is-gift"
         onclick="this.checked ? showGiftSection() : hideGiftSection();"
       />
       Yes, this is a gift.
@@ -15,17 +21,17 @@
     </label>
 
     <fieldset
-      id="gift-details-section"
+      id="gift-section--details-section"
       class="flex flex-col gap-2 self-stretch mb-4"
       disabled
-      style="display: none;"
+      style="display: none"
     >
       <div>
         <label for="recipient-name"> Recipient Name </label>
         <input
           type="text"
-          id="recipient-name"
-          name="gift_recipient_name"
+          id="gift-section--recipient-name"
+          name="gift-section--recipient-name"
           class="block w-full p-2 text-md border rounded focus-outline"
         />
       </div>
@@ -34,20 +40,20 @@
         <label for="recipient-email"> Recipient Email </label>
         <input
           type="email"
-          id="recipient-email"
-          name="gift_recipient_email"
+          id="gift-section--recipient-email"
+          name="gift-section--recipient-email"
           class="block w-full p-2 text-md border rounded focus-outline"
           required
         />
       </div>
 
       <div>
-        <label for="gift-message">
+        <label for="gift-section--gift-message">
           Include a personal message to be sent to the recipient (optional)
         </label>
         <textarea
-          id="gift-message"
-          name="gift_personal_message"
+          id="gift-section--gift-message"
+          name="gift-section--gift-message"
           class="block w-full h-20 p-2 text-md block p-2 border rounded focus-outline"
         ></textarea>
       </div>
@@ -56,24 +62,23 @@
 </section>
 
 <script>
-  // Set initial state
-  if ($("#gift").checked) {
-    showGiftSection()
-  } else {
-    hideGiftSection()
-  }
+  class GiftSection {
+    constructor() {
+      $("#gift-section").style.display = "block";
+    }
 
-  function showGiftSection() {
-    showFlex("#gift-details-section");
-    $("#gift-details-section").disabled = false;
-    $("#recipient-name").setAttribute("required", "true");
-    $("#recipient-email").setAttribute("required", "true");
-  }
+    showGiftSection() {
+      showFlex("#gift-details-section");
+      $("#gift-details-section").disabled = false;
+      $("#recipient-name").setAttribute("required", "true");
+      $("#recipient-email").setAttribute("required", "true");
+    }
 
-  function hideGiftSection() {
-    hide("#gift-details-section");
-    $("#gift-details-section").disabled = true;
-    $("#recipient-name").setAttribute("required", "false");
-    $("#recipient-email").setAttribute("required", "false");
+    hideGiftSection() {
+      hide("#gift-details-section");
+      $("#gift-details-section").disabled = true;
+      $("#recipient-name").setAttribute("required", "false");
+      $("#recipient-email").setAttribute("required", "false");
+    }
   }
 </script>
