--- a/frontend/src/loader.html
+++ b/frontend/src/loader.html
@@ -1,23 +1,33 @@
 <style>
   #loader {
     display: none;
-    width: 40px;
-    height: 40px;
-    border: 4px solid #ccc;
-    border-top: 4px solid #000;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
-  @keyframes spin {
-    to {
-      transform: translate(-50%, -50%) rotate(360deg);
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid #ccc;
+      border-top: 4px solid #000;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    @keyframes spin {
+      to {
+        transform: translate(-50%, -50%) rotate(360deg);
+      }
     }
   }
 </style>
 
-<div id="loader"></div>
+<div id="loader">
+  <div class="spinner"></div>
+</div>
