--- a/frontend/src/payment-method-section.html
+++ b/frontend/src/payment-method-section.html
@@ -4,27 +4,27 @@
   <div class="radio-group flex gap-2">
     <input
       type="radio"
-      id="credit-card"
-      name="payment_method"
+      id="payment-method-section--credit-card"
+      name="payment-method-section--method"
       value="credit-card"
-      onclick="hide('#bank-details-message')"
+      onclick="PaymentMethodSection.handlePaymentMethodChange('credit-card')"
       checked
     />
-    <label for="credit-card" class="rounded text-blue">Credit Card</label>
+    <label for="payment-method-section--credit-card" class="rounded text-blue">Credit Card</label>
 
     <input
       type="radio"
-      id="bank-transfer"
-      name="payment_method"
+      id="payment-method-section--bank-transfer"
+      name="payment-method-section--method"
       value="bank-transfer"
-      onclick="showBlock('#bank-details-message')"
+      onclick="PaymentMethodSection.handlePaymentMethodChange('bank-transfer')"
     />
-    <label for="bank-transfer" class="rounded text-blue">
+    <label for="payment-method-section--bank-transfer" class="rounded text-blue">
       Bank Transfer
     </label>
   </div>
 
-  <div id="bank-details-message" style="display: none; opacity: 0;">
+  <div id="payment-method-section--bank-details-message" style="display: none; opacity: 0;">
     <div class="mt-4">
       After you submit this form, we will give you our account details and a
       unique reference number. You can then log in to your bank and make a bank
@@ -34,8 +34,20 @@
 </section>
 
 <script>
-  // Set initial state
-  if ($("#bank-transfer").checked) {
-    showBlock("#bank-details-message");
+  class PaymentMethodSection {
+    constructor() {
+      $("#payment-method-section").style.display = "block";
+    }
+
+    static handlePaymentMethodChange(method) {
+      if (method === "bank-transfer") {
+        $("#payment-method-section--bank-details-message").style.display = "block";
+        $("#payment-method-section--bank-details-message").style.opacity = 1;
+      } else {
+        $("#payment-method-section--bank-details-message").style.display = "none";
+        $("#payment-method-section--bank-details-message").style.opacity = 0;
+      }
+      formController.setPaymentMethod(method);
+    }
   }
 </script>
