--- a/frontend/src/communications-section.html
+++ b/frontend/src/communications-section.html
@@ -9,9 +9,10 @@
     <h2 class="inline-block text-lg mt-8">How did you hear about us?</h2>
     <select
       placeholder="Select an option"
-      name="how_did_you_hear_about_us_db"
-      id="referral-sources"
+      name="communications-section--referral-sources"
+      id="communications-section--referral-sources"
       class="eaa-select text-md flex flex-grow mb-4 rounded border h-12 border-none p-2 focus-outline"
+      onchange="CommunicationsSection.handleReferralSourceChange()"
     ></select>
   </div>
 
@@ -19,8 +20,9 @@
     <label class="eaa-checkbox mb-4">
       <input
         type="checkbox"
-        id="subscribe-to-updates"
-        name="subscribe_to_updates"
+        id="communications-section--subscribe-to-updates"
+        name="communications-section--subscribe-to-updates"
+        onclick="CommunicationsSection.handleSubscribeToUpdatesChange()"
         checked
       />
       Send me news and updates
@@ -30,8 +32,9 @@
     <label class="eaa-checkbox mb-4">
       <input
         type="checkbox"
-        id="subscribe-to-newsletter"
-        name="subscribe_to_newsletter"
+        id="communications-section--subscribe-to-newsletter"
+        name="communications-section--subscribe-to-newsletter"
+        onclick="CommunicationsSection.handleSubscribeToNewsletterChange()"
       />
       Subscribe me to the global Effective Altruism newsletter
       <div class="checkmark rounded"></div>
@@ -40,8 +43,9 @@
     <label class="eaa-checkbox">
       <input
         type="checkbox"
-        id="connect-to-community"
-        name="connect_to_community"
+        id="communications-section--connect-to-community"
+        name="communications-section--connect-to-community"
+        onclick="CommunicationsSection.handleConnectToCommunityChange()"
       />
       Connect me with my local Effective Altruism community
       <div class="checkmark rounded"></div>
@@ -53,7 +57,9 @@
   class CommunicationsSection {
     constructor() {
       $("#communications-section").style.display = "block";
-      this.referralSourcesSelect = $("#referral-sources");
+      this.referralSourcesSelect = $(
+        "#communications-section--referral-sources"
+      );
       this.fetchReferralSources();
     }
 
@@ -72,6 +78,30 @@
       });
 
       this.referralSourcesSelect.innerHTML = referralSourcesListHTML;
+    }
+
+    static handleSubscribeToUpdatesChange() {
+      formController.setSubscribeToUpdates(
+        $("#communications-section--subscribe-to-updates").checked
+      );
+    }
+
+    static handleSubscribeToNewsletterChange() {
+      formController.setSubscribeToNewsletter(
+        $("#communications-section--subscribe-to-newsletter").checked
+      );
+    }
+
+    static handleConnectToCommunityChange() {
+      formController.setSubscribeToCommunity(
+        $("#communications-section--connect-to-community").checked
+      );
+    }
+
+    static handleReferralSourceChange() {
+      formController.setHowDidYouHearAboutUs(
+        $("#communications-section--referral-sources").value
+      );
     }
   }
 </script>
