--- a/frontend/src/donation-frequency-section.html
+++ b/frontend/src/donation-frequency-section.html
@@ -12,6 +12,7 @@
       id="donation-frequency-section--one-time"
       name="donation-frequency-section--frequency"
       value="one-time"
+      onclick="DonationFrequencySection.handleFrequencyChange(event)"
       checked
     />
     <label for="donation-frequency-section--one-time" class="rounded text-blue"> One time </label>
@@ -19,6 +20,7 @@
       type="radio"
       id="donation-frequency-section--monthly"
       name="donation-frequency-section--frequency"
+      onclick="DonationFrequencySection.handleFrequencyChange(event)"
       value="monthly"
     />
     <label for="donation-frequency-section--monthly" class="rounded text-blue"> Monthly </label>
@@ -29,6 +31,11 @@
   class DonationFrequencySection {
     constructor() {
       $("#donation-frequency-section").style.display = "block";
+    }
+
+    static handleFrequencyChange(event) {
+      const frequency = event.target.value;
+      formController.setDonationFrequency(frequency);
     }
   }
 </script>
