--- a/frontend/src/loader.html
+++ b/frontend/src/loader.html
@@ -1,11 +1,13 @@
 <style>
   #loader {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: 1000;
 
     .spinner {
       width: 40px;
