--- a/frontend/src/payment-method-section.html
+++ b/frontend/src/payment-method-section.html
@@ -1,4 +1,10 @@
-<section id="payment-method-section" style="display: none">
+<style>
+  #payment-method-section {
+    display: none;
+  }
+</style>
+
+<section id="payment-method-section">
   <h2 class="text-lg mt-8">Payment Method</h2>
 
   <div class="radio-group flex gap-2">
