Remove "help us do more good" section

--- a/frontend/src/specific-allocation-section.html
+++ b/frontend/src/specific-allocation-section.html
@@ -61,12 +61,10 @@
         categories[charity.category].push(charity);
       });
 
+      delete categories["Help us do more good"];
+
       Object.keys(categories).forEach((catagory) => {
-        specificAllocationSectionHTML += `<h3>${catagory} ${
-          catagory !== "Help us do more good"
-            ? "<sup><a href='https://effectivealtruism.org.au/inclusion-criteria/'>ⓘ</a></sup>"
-            : ""
-        }</h3>`;
+        specificAllocationSectionHTML += `<h3>${catagory}<sup><a href='https://effectivealtruism.org.au/inclusion-criteria/'>ⓘ</a></sup></h3>`;
         categories[catagory].forEach((charity) => {
           specificAllocationSectionHTML += `
       <div class="flex charity-option">
