Update festive-gift-seciton wording

--- a/frontend/src/festive-gift-section.html
+++ b/frontend/src/festive-gift-section.html
@@ -62,7 +62,7 @@
           to pass on.
         </p>
         <label for="recipient-name">
-          Recipient's Name, max. 14 characters
+          Recipient's first name (14 characters max)
         </label>
         <div class="info-icon" tabindex="0">
           ⓘ
@@ -82,7 +82,7 @@
       </div>
 
       <div>
-        <label for="recipient-email"> Recipient's Email </label>
+        <label for="recipient-email"> Recipient's email </label>
         <div class="info-icon" tabindex="0">
           ⓘ
           <div class="info-tooltip">
@@ -102,7 +102,7 @@
 
       <div>
         <label for="festive-gift-message">
-          Personal message, max. 120 characters (optional)
+          Personal message (optional, 120 characters max) 
         </label>
         <div class="info-icon" tabindex="0">
           ⓘ
