--- a/frontend/src/loader.html
+++ b/frontend/src/loader.html
@@ -12,8 +12,8 @@
     .spinner {
       width: 40px;
       height: 40px;
-      border: 4px solid #ccc;
-      border-top: 4px solid #000;
+      border: 4px solid rgba(0, 0, 0, 0.1);
+      border-top: 4px solid #198094;
       border-radius: 50%;
       animation: spin 1s linear infinite;
       position: fixed;
@@ -21,11 +21,10 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
-
-    @keyframes spin {
-      to {
-        transform: translate(-50%, -50%) rotate(360deg);
-      }
+  }
+  @keyframes spin {
+    to {
+      transform: translate(-50%, -50%) rotate(360deg);
     }
   }
 </style>
